--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
       <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+		<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+		<link rel="mask-icon" href="%PUBLIC_URL%/favicon.svg" color="#5bbad5"> 
+		<meta name="msapplication-TileColor" content="#da532c"> 
+		<meta name="theme-color" content="#ffffff"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Installment Affordability Calculator</title>
         <meta name="description" content="Check if you can afford an installment plan with our free calculator. Calculate your debt-to-income ratio, loan payments, down payments, and savings goals." />
-        <meta name="keywords" content="installment calculator, affordability calculator, loan calculator, debt-to-income, savings calculator, financial calculator" />
+        <meta name="keywords" content="installment calculator, affordability calculator, loan calculator, debt-to-income, savings calculator, financial calculator, affordibility check" />
       </head>
       <body>
         <div id="root"></div>
