--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
+  <meta name="msapplication-TileColor" content="#da532c"> 
+	<meta name="theme-color" content="#ffffff"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Installment Affordability Calculator</title>
+  <meta name="description" content="Check if you can afford an installment plan with our free calculator. Calculate your debt-to-income ratio, loan payments, down payments, and savings goals." />
+  <meta name="keywords" content="installment calculator, affordability calculator, loan calculator, debt-to-income, savings calculator, financial calculator, affordibility check" />
+       
 </head>
 <body>
   <div id="root"></div>
