--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-
-
-	
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="msapplication-TileColor" content="#da532c"> 
   <meta name="theme-color" content="#ffffff"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Installment Affordability Calculator</title>
   <meta name="description" content="Check if you can afford an installment plan with our free calculator. Calculate your debt-to-income ratio, loan payments, down payments, and savings goals." />
   <meta name="keywords" content="installment calculator, affordability calculator, loan calculator, debt-to-income, savings calculator, financial calculator, affordibility check" />
-       
+	   <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QPH4LGQ7LV"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-QPH4LGQ7LV');
+	</script>    
 </head>
 <body>
   <div id="root"></div>
