--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <meta name="google-adsense-account" content="ca-pub-5940606769399427">
   <meta name="msapplication-TileColor" content="#da532c"> 
   <meta name="theme-color" content="#ffffff"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
