--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	  gtag('js', new Date());
 	
 	  gtag('config', 'G-QPH4LGQ7LV');
-	</script>    
+	</script>   
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4461919902418559"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="root"></div>
